--- a/_posts/2020-10-21- Article 1 Snow Leopards/Article 1 Snow Leopards.Rmd
+++ b/_posts/2020-10-21- Article 1 Snow Leopards/Article 1 Snow Leopards.Rmd
@@ -24,7 +24,7 @@ Words: 930
 
 ## II - Vocabulary
 
-| Word from the text 	| synonym/definition in English                                                                                      	| French Translation                                              	|
+| Word from the text 	| Synonym/definition in English                                                                                      	| French Translation                                              	|
 |--------------------	|--------------------------------------------------------------------------------------------------------------------	|-----------------------------------------------------------------	|
 | distinguish        	| to mark off as different, to recognize as distinct or different                                                    	| distinguer                                                      	|
 | self-portrait      	| a portrait of oneself done by oneself                                                                              	| autoportrait                                                    	|
@@ -60,8 +60,8 @@ Words: 930
 
 | Researchers ?                        | Örjan Johanssen (biologist at the Swedish)                                                                                                                                                                                                                        |
 |--------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Published in ? When ? (If mentioned) | Scientific Reports (April 2020)                                                                                                                                                                                                                                   |
-| General topic                        | Cameras an Scientists may overcount snow leopards because they are difficult to identify                                                                                                                                                                      |
+| Published in ? When ? (If mentioned) | - Scientific Reports (April 2020)                                                                                                                                                                                                                                   |
+| General Topic                        | - Cameras an Scientists may overcount snow leopards because they are difficult to identify                                                                                                                                                                      |
 | Procedure/ what was examinated       | - Biologists distinguish a snow leopard by looking at his unique pattern's coat + Different camera angles and light levels can lead to mistakes + Experts and non-experts misidentified photos of snow leopards                                                  |
 | Conclusions/discovery                | - Snow leopards population may be overestimated by 35%. - Other big cat species may be in the same case. - They are working on an AI able to distinguish them properly but it has the same problems as the Human eye. - Using more cameras may solve the problems |
 | Remaining questions                  | - Are snow leopards still endangered ? - Are there other species in the same case as snow leopards ? - Will we ever be able to distinguish snow leopards properly ?                                                                                             |
