--- a/_posts/2020-10-25- Article 2 Ships Hitting Animals/Article 2 Ships Hitting Animals.Rmd
+++ b/_posts/2020-10-25- Article 2 Ships Hitting Animals/Article 2 Ships Hitting Animals.Rmd
@@ -12,9 +12,9 @@ output:
     self_contained: false
 ---
 
-# Article 2: Ships Hit Smaller Sea Animals More Often than Researchers Thought
+# Article 2: Ships Hit Smaller Sea Animals More Often than Researchers Thought.
 
-<img src = >
+<img src = https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Sea_otter_pair2.jpg/435px-Sea_otter_pair2.jpg>
 
 ## I - Source:
 
@@ -26,11 +26,59 @@ Words : 885
 
 ## II - Vocabulary:
 
-
+| Word from the text    	| synonym/definition in english                                                                                            	| French translation                        	|
+|-----------------------	|--------------------------------------------------------------------------------------------------------------------------	|-------------------------------------------	|
+| mammals               	|                                                                                                                          	| mammifères                                	|
+| oceangoing            	| designed and equipped to travel on the open sea                                                                          	| de haute-mer                              	|
+| bows                  	| to bend the knee or body, or to incline the head, so as to show respect or greeting                                      	| faire une révérence, s'incliner           	|
+| curbs                 	| a rim of joined stones or concrete, along a street, forming an edge for a sidewalk                                       	| frein, limitation                         	|
+| strike                	| - to drive so as to cause impact or to collide - to deal (a blow) to (someone)                                           	| grève, donner un coup, sonner, frapper    	|
+| sifted                	| to separate and keep the larger or thicker parts or pieces of (flour, etc.) with a sieve                                 	| tamiser                                   	|
+| necropsy              	| the examination of a body after death, an autopsy                                                                        	| nécropsie                                 	|
+| eyewitness            	| a person who sees some act, occurrence, or the like, and can give a firsthand account of it                              	| témoin oculaire                           	|
+| anecdotal             	| based on personal observation, case study reports, or random investigations rather than systematic scientific evaluation 	| anecdotique                               	|
+| craft                 	| a ship or other vessel, an airplane, an art or trade requiring special skills                                            	| embarcation, métier, avion                	|
+| sea otters            	| /                                                                                                                        	| loutres de mer                            	|
+| forages               	| food obtain by foraging                                                                                                  	| fourrages                                 	|
+| hazard                	| something causing danger, peril, risk, or difficulty, to expose to risk                                                  	| danger, risque, aléa                      	|
+| cetacean              	| belonging to the Cetacea, an order of aquatic, chiefly marine mammals, including the whales and dolphins                 	| cétacé                                    	|
+| wash                  	| - to cleanse by dipping, rubbing, or scrubbing in liquid, esp. water - to move in or as if in waves                      	| bruit de l'eau, laver                     	|
+| onshore               	| onto or in the direction of the shore from a body of water                                                               	| sur terre, à terre                        	|
+| undergo               	| to be subjected to                                                                                                       	| subir, effectuer                          	|
+| undercounted          	| to count less than the full number or amount of                                                                          	| sous-estimé                               	|
+| findings              	| the act of a person or thing that finds, discovery                                                                       	| découvertes, conclusions                  	|
+| recreational          	| of, relating to, or used for recreation                                                                                  	| récréatif, de loisir                      	|
+| reassessment          	| /                                                                                                                        	| réevaluation, réconsidération             	|
+| prompted              	| performed at once or without delay                                                                                       	| rapide, prompt                            	|
+| propeller             	| a device having a revolving hub with radiating blades, for propelling an airplane, ship                                  	| hélice                                    	|
+| evenly                	| in an even manner, smoothly                                                                                              	| uniformement, également                   	|
+| slightly              	| in small measure or degree                                                                                               	| légèrement, quelque peu, plutôt           	|
+| curved                	| a continuously bending line, without angles                                                                              	| incurvé, courbe, arrondi                  	|
+| scarring              	| a mark left by a healed wound                                                                                            	| cicatrisation                             	|
+| reproductive claspers 	| /                                                                                                                        	| griffes de reproduction                   	|
+| otherwise             	| under other circumstances                                                                                                	| autrement, sinon, sans quoi, différemment 	|
+| foraging              	| the acquisition of food by hunting, fishing, or the gathering of plant matter                                            	| chercher de la nourriture                 	|
+| sighting              	| an occasion on which something is seen                                                                                   	| observation, être aperçu                  	|
+| loggerhead turtles    	| /                                                                                                                        	| tortues caouannes                         	|
+| caspian seals         	| /                                                                                                                        	| phoques de la mer caspienne               	|
+| breeding grounds      	| Animal Behaviora place where animals breed.                                                                              	| zones de reproduction, terrain propice    	|
+| vessels               	| a craft for traveling on water, esp. a fairly large one, a ship or a boat                                                	| vaiseau, bateau, navire                   	|
+| bright                	| giving off or reflecting light                                                                                           	| brillant, lumineux                        	|
+| voluntarily           	| done, made, brought about, or performed through or by one's will or one's own free choice                                	| volontairement, de son plein gré          	|
+| congregate            	| to come together in a body                                                                                               	| se rassembler                             	|
+| offshore              	| off or away from the shore                                                                                               	| en mer, au large                          	|
+| myriad                	| a great number of persons or things                                                                                      	| myriade, innombrable, nombreaux           	|
+| noise                 	| sound, esp. of a loud, harsh, or confused kind                                                                           	| bruit, bavardages                         	|
 
 ## III - Analysis table about the study:
 
-
+| Researchers ?                        	| - Stephanie Plön (Cetacean biologist at the Bayworld Center for Research and Education)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	|
+|--------------------------------------	|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------	|
+| Published in ? When ? (If mentioned) 	| - Published in the "Frontiers in Marine Science"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    	|
+| General Topic                        	| - What are the causes of boat collisions with small marine mammals and what impacts do they cause?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  	|
+| Procedure/What was exmaminated ?     	| - We know that boat propellers and bows are a danger to large marine mammals + Thanks to eyewitness accounts and autopsy results, It has been found that boats hit about 75 species of small marine animals as well as vulnerable or critically endangered species + Collisions with small animals go unnoticed because the impacts are not noticeable + Their bodies disappear faster than those of large animals and are therefore harder to notice + Species that sleep on the surface are more threatened because they are directly exposed + Young animals are more vulnerable because they are less experienced + In 30 years in Florida, the more boats there are, the less turtles there are, and in the Arctic, seal breeding grounds are destroyed by boats and their bright lights dazzle and stun the seals who can no longer dodge the 	|
+| Conclusions/Discovery ?              	| - Efforts to monitor and limit collisions with ships are underway + Injuries have negative effects on the competitiveness and survival of individuals and they also have to expend energy to heal themselves initially planned for something else which impacts on the survivability of the species + Skate sightings manta in Western Australian waters have decreased, mainly due to collisions + Database results are skewed and the number of collisions and injured animals per ship is much higher than expected + By slowing ship speeds and using whale detection sensors, the collision rate in New Zealand has become almost zero                                                                                                                                                                                                         	|
+| Remaining questions ?                	| - Is it possible to change the trajectories of vessels to avoid risk areas ? - How distorted are the results ? - Can these collisions be the main cause of the extinction of a species?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	||
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
